# aos-dpctl

./: .gitignore  AOS_OFDPA_Example.xlsx  Makefile.am  README.md  boot.sh  config.h  configure.ac
include/: linmsdebug.h
include/openflow/: openflow-ext.h  openflow.h
lib/: automake.mk  backtrace.c  byte-order.h  daemon.c  dirs.c  dpif.c  flow.c  flow.h  hash.c  hash.h  hmap.c  hmap.h  ipv6_util.c  ipv6_util.h  leak-checker.c  netlink.c  ofp.c  ofp.h  ofpbuf.c  ofpbuf.h  ofpstat.c  packets.h  poll-loop.c  socket-util.c  unaligned.h  vconn-stream.c  vconn-tcp.c  vconn-unix.c  vconn.c  vconn.h  vlog-modules.def  vlog-socket.c  vlog.c  vlog.h
oflib/: automake.mk  ofl-actions-pack.c  ofl-actions-print.c  ofl-actions-unpack.c  ofl-actions.c  ofl-actions.h  ofl-log-vlog.h  ofl-log.h  ofl-messages-pack.c  ofl-messages-print.c  ofl-messages-unpack.c  ofl-messages.c  ofl-messages.h  ofl-packets.h  ofl-print.c  ofl-print.h  ofl-structs-match.c  ofl-structs-pack.c  ofl-structs-print.c  ofl-structs-unpack.c  ofl-structs.c  ofl-structs.h  ofl-utils.h  ofl.h  oxm-match.c  oxm-match.def  oxm-match.h  vlog-modules.def
oflib-exp/: automake.mk  ofl-exp-openflow.c  ofl-exp-openflow.h  ofl-exp.c  ofl-exp.h  vlog-modules.def
utilities/: automake.mk  dpctl  dpctl.c  dpctl.h  vlog-modules.def
